--- a/Q1.ipynb
+++ b/Q1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -82,44 +82,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.5454026098213985e-15\n"
+     ]
+    }
+   ],
    "source": [
-    "from sympy import Integral, symbols, Rational, pi\n",
-    "from IPython.display import display, Math\n",
-    "x,y,z = symbols(['x', 'y', 'z'], real=True)\n",
-    "x1,y1 = symbols(['x1', 'y1'], real=True)    \n",
-    "eps0 = 1e-9/(36*pi)\n",
-    "rho_s = lambda x,y: (1e-9)*x*y*(x**2+y**2+25)**Rational(3,2)"
+    "#Ponto p pedido na questão\n",
+    "p = Matriz([4,2,2])\n",
+    "#Distancias dos 3 pontos menos o ponto p\n",
+    "r1p = Modulo.norm(r1-p)\n",
+    "r2p = Modulo.norm(r2-p)\n",
+    "r3p = Modulo.norm(r3-p)\n",
+    "#Potencial Elétrico das 3 cargas\n",
+    "V1 = (1/4*pi*eps0) * q1/ r1p\n",
+    "V2 = (1/4*pi*eps0) * q2/ r2p\n",
+    "V3 = (1/4*pi*eps0) * q3/ r3p\n",
+    "\n",
+    "#Potencial elétrico Total\n",
+    "V_t = V1+V2+V3\n",
+    "\n",
+    "print (V_t)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'sympy' has no attribute 'norm'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\igore\\OneDrive\\Documentos\\AVALIACAO_ELETROMAG\\Q1.ipynb Cell 8\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/igore/OneDrive/Documentos/AVALIACAO_ELETROMAG/Q1.ipynb#X11sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m P \u001b[39m=\u001b[39m sp\u001b[39m.\u001b[39mMatrix([\u001b[39m4\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m2\u001b[39m])\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/igore/OneDrive/Documentos/AVALIACAO_ELETROMAG/Q1.ipynb#X11sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39m# Distâncias entre as cargas e o ponto P\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/igore/OneDrive/Documentos/AVALIACAO_ELETROMAG/Q1.ipynb#X11sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m dist_P1 \u001b[39m=\u001b[39m sp\u001b[39m.\u001b[39;49mnorm(r1 \u001b[39m-\u001b[39m P)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/igore/OneDrive/Documentos/AVALIACAO_ELETROMAG/Q1.ipynb#X11sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m dist_P2 \u001b[39m=\u001b[39m sp\u001b[39m.\u001b[39mnorm(r2 \u001b[39m-\u001b[39m P)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/igore/OneDrive/Documentos/AVALIACAO_ELETROMAG/Q1.ipynb#X11sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m dist_P3 \u001b[39m=\u001b[39m sp\u001b[39m.\u001b[39mnorm(r3 \u001b[39m-\u001b[39m P)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'sympy' has no attribute 'norm'"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "p = [(x,4), (y,2), (z,2)]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ponto = [(x,0), (y,0), (z,5)]\n",
-    "rp = Matriz([x,y,z]).subs(ponto)\n",
-    "re = Matriz([x1,y1,0])\n",
-    "r = rp- re\n",
-    "dS = 1\n",
-    "dE = (rho_s(x1,y1) * dS) * r/ (4*pi*eps0*r.norm()**3)\n",
-    "lims = [(x1,0,1), (y1,0,1)]\n",
-    "E = Integral(dE,*lims)\n",
-    "display(E)\n",
-    "display(E.doit())"
-   ]
+   "source": []
   }
  ],
  "metadata": {
