--- a/Q1.ipynb
+++ b/Q1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'r' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\igore\\OneDrive\\Documentos\\AVALIACAO_ELETROMAG\\Q1.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/igore/OneDrive/Documentos/AVALIACAO_ELETROMAG/Q1.ipynb#X16sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m R1 \u001b[39m=\u001b[39m r\u001b[39m-\u001b[39mr1\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/igore/OneDrive/Documentos/AVALIACAO_ELETROMAG/Q1.ipynb#X16sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m F1 \u001b[39m=\u001b[39m (\u001b[39m1\u001b[39m\u001b[39m/\u001b[39m(\u001b[39m4\u001b[39m\u001b[39m*\u001b[39mpi\u001b[39m*\u001b[39meps0))\u001b[39m*\u001b[39m(q\u001b[39m*\u001b[39mq1\u001b[39m*\u001b[39mR1)\u001b[39m/\u001b[39mR1\u001b[39m.\u001b[39mnorm()\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m3\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/igore/OneDrive/Documentos/AVALIACAO_ELETROMAG/Q1.ipynb#X16sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m R2 \u001b[39m=\u001b[39m r\u001b[39m-\u001b[39mr2\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'r' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "R1 = r-r1\n",
+    "F1 = (1/(4*pi*eps0))*(q*q1*R1)/R1.norm()**3\n",
+    "R2 = r-r2\n",
+    "F2 = (1/(4*pi*eps0))*(q*q2*R2)/R2.norm()**3\n",
+    "F = F1+F2\n",
+    "F.evalf(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -77,12 +103,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "b) O potencial elétrico em $(4,2,2)$"
+    "b) O campo elétrico (E) em $(4,2,2)$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-2.60838231e+09,  2.85438650e+11,  4.28127984e+11])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = Matriz([4,2,2])\n",
+    "#Vetores posição\n",
+    "r1p = r1-p\n",
+    "r2p = r2-p\n",
+    "r3p = r3-p\n",
+    "#Distancias dos 3 pontos menos o ponto p\n",
+    "d1p = Modulo.norm(r1p)**3\n",
+    "d2p = Modulo.norm(r2p)**3\n",
+    "d3p = Modulo.norm(r3p)**3\n",
+    "\n",
+    "#Campo elétrico E\n",
+    "E1 =  (q1*r1p)/(4*pi*eps0)*d1p\n",
+    "E2 = (q2*r2p)/(4*pi*eps0)*d2p\n",
+    "E3 = (q3*r3p)/(4*pi*eps0)*d3p\n",
+    "#Campo total\n",
+    "Et = E1+E2+E3\n",
+    "Et"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "c) O potencial elétrico em $(4,2,2)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -94,16 +163,11 @@
     }
    ],
    "source": [
-    "#Ponto p pedido na questão\n",
-    "p = Matriz([4,2,2])\n",
-    "#Distancias dos 3 pontos menos o ponto p\n",
-    "r1p = Modulo.norm(r1-p)\n",
-    "r2p = Modulo.norm(r2-p)\n",
-    "r3p = Modulo.norm(r3-p)\n",
     "#Potencial Elétrico das 3 cargas\n",
-    "V1 = (1/4*pi*eps0) * q1/ r1p\n",
-    "V2 = (1/4*pi*eps0) * q2/ r2p\n",
-    "V3 = (1/4*pi*eps0) * q3/ r3p\n",
+    "\n",
+    "V1 = (1/4*pi*eps0) * q1/ Modulo.norm(r1p)\n",
+    "V2 = (1/4*pi*eps0) * q2/ Modulo.norm(r2p)\n",
+    "V3 = (1/4*pi*eps0) * q3/ Modulo.norm(r3p)\n",
     "\n",
     "#Potencial elétrico Total\n",
     "V_t = V1+V2+V3\n",
@@ -112,23 +176,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'sympy' has no attribute 'norm'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\igore\\OneDrive\\Documentos\\AVALIACAO_ELETROMAG\\Q1.ipynb Cell 8\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/igore/OneDrive/Documentos/AVALIACAO_ELETROMAG/Q1.ipynb#X11sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m P \u001b[39m=\u001b[39m sp\u001b[39m.\u001b[39mMatrix([\u001b[39m4\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m2\u001b[39m])\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/igore/OneDrive/Documentos/AVALIACAO_ELETROMAG/Q1.ipynb#X11sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39m# Distâncias entre as cargas e o ponto P\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/igore/OneDrive/Documentos/AVALIACAO_ELETROMAG/Q1.ipynb#X11sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m dist_P1 \u001b[39m=\u001b[39m sp\u001b[39m.\u001b[39;49mnorm(r1 \u001b[39m-\u001b[39m P)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/igore/OneDrive/Documentos/AVALIACAO_ELETROMAG/Q1.ipynb#X11sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m dist_P2 \u001b[39m=\u001b[39m sp\u001b[39m.\u001b[39mnorm(r2 \u001b[39m-\u001b[39m P)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/igore/OneDrive/Documentos/AVALIACAO_ELETROMAG/Q1.ipynb#X11sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m dist_P3 \u001b[39m=\u001b[39m sp\u001b[39m.\u001b[39mnorm(r3 \u001b[39m-\u001b[39m P)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'sympy' has no attribute 'norm'"
-     ]
-    }
-   ],
-   "source": []
+   "source": [
+    "d)O trabalho necessário para mover uma carga pontual de $1mC$ de $(4,2,2)$ a $(5,2,2)$"
+   ]
   },
   {
    "cell_type": "code",
