--- a/Q1.ipynb
+++ b/Q1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,33 +47,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'r' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\igore\\OneDrive\\Documentos\\AVALIACAO_ELETROMAG\\Q1.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/igore/OneDrive/Documentos/AVALIACAO_ELETROMAG/Q1.ipynb#X16sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m R1 \u001b[39m=\u001b[39m r\u001b[39m-\u001b[39mr1\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/igore/OneDrive/Documentos/AVALIACAO_ELETROMAG/Q1.ipynb#X16sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m F1 \u001b[39m=\u001b[39m (\u001b[39m1\u001b[39m\u001b[39m/\u001b[39m(\u001b[39m4\u001b[39m\u001b[39m*\u001b[39mpi\u001b[39m*\u001b[39meps0))\u001b[39m*\u001b[39m(q\u001b[39m*\u001b[39mq1\u001b[39m*\u001b[39mR1)\u001b[39m/\u001b[39mR1\u001b[39m.\u001b[39mnorm()\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m3\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/igore/OneDrive/Documentos/AVALIACAO_ELETROMAG/Q1.ipynb#X16sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m R2 \u001b[39m=\u001b[39m r\u001b[39m-\u001b[39mr2\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'r' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "R1 = r-r1\n",
-    "F1 = (1/(4*pi*eps0))*(q*q1*R1)/R1.norm()**3\n",
-    "R2 = r-r2\n",
-    "F2 = (1/(4*pi*eps0))*(q*q2*R2)/R2.norm()**3\n",
-    "F = F1+F2\n",
-    "F.evalf(4)"
+    "Q = q1/(4*pi*eps0)\n",
+    "r12 = r1-r2\n",
+    "R12 = (Modulo.norm(r12))**3\n",
+    "R12\n",
+    "r13 = r1-r3\n",
+    "R13 = (Modulo.norm(r13))**3\n",
+    "\n",
+    "A = (q2*r12)/(R12)\n",
+    "B = (q3*r13)/(R13)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 141.82472521, -364.02674731,    9.96057439])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "F = Q*(A+B)\n",
+    "F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.28571429,  0.85714286, -0.42857143])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r12 = r2-r1\n",
+    "R12 = Modulo.norm(r12)\n",
+    "a12 = r12/R12\n",
+    "a12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -83,21 +118,19 @@
       "A força total em Q1 é:\n",
       "[ -68.08781123  265.71086202 -304.90823028]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7.0"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": [
-    "r12 = r2-r1\n",
-    "R12 = Modulo.norm(r12)\n",
-    "dist12 = r12/R12\n",
-    "F12 = ((1/(4*pi*eps0))*Modulo.norm(q1*q2)/Modulo.norm(R12)**2)*dist12\n",
-    "r13 = r3-r1\n",
-    "R13 = Modulo.norm(r13)\n",
-    "dist13 = r13/R13\n",
-    "F13 = ((1/(4*pi*eps0))*Modulo.norm(q1*q3)/Modulo.norm(R13)**2)*dist13\n",
-    "Ft = F12+F13\n",
-    "print(\"A força total em Q1 é:\")\n",
-    "print(Ft)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -108,16 +141,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-2.60838231e+09,  2.85438650e+11,  4.28127984e+11])"
+       "array([ 2.60838231e+09, -2.85438650e+11, -4.28127984e+11])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,9 +165,9 @@
    "source": [
     "p = Matriz([4,2,2])\n",
     "#Vetores posição\n",
-    "r1p = r1-p\n",
-    "r2p = r2-p\n",
-    "r3p = r3-p\n",
+    "r1p = p-r1\n",
+    "r2p = p-r2\n",
+    "r3p = p-r3\n",
     "#Distancias dos 3 pontos menos o ponto p\n",
     "d1p = Modulo.norm(r1p)**3\n",
     "d2p = Modulo.norm(r2p)**3\n",
