--- a/Q1.ipynb
+++ b/Q1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,14 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "Q = q1/(4*pi*eps0)\n",
     "r12 = r1-r2\n",
     "R12 = (Modulo.norm(r12))**3\n",
-    "R12\n",
     "r13 = r1-r3\n",
     "R13 = (Modulo.norm(r13))**3\n",
     "\n",
@@ -64,73 +63,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 141.82472521, -364.02674731,    9.96057439])"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "F = Q*(A+B)\n",
-    "F"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-0.28571429,  0.85714286, -0.42857143])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "r12 = r2-r1\n",
-    "R12 = Modulo.norm(r12)\n",
-    "a12 = r12/R12\n",
-    "a12"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A força total em Q1 é:\n",
-      "[ -68.08781123  265.71086202 -304.90823028]\n"
+      "A força em Q1 é de: [ 141.82472521 -364.02674731    9.96057439]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "7.0"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "F = Q*(A+B)\n",
+    "print(\"A força em Q1 é de:\", F)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -141,23 +88,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 2.60838231e+09, -2.85438650e+11, -4.28127984e+11])"
+       "array([-2.60838231e+09,  2.85438650e+11,  4.28127984e+11])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,21 +105,52 @@
    "source": [
     "p = Matriz([4,2,2])\n",
     "#Vetores posição\n",
-    "r1p = p-r1\n",
-    "r2p = p-r2\n",
-    "r3p = p-r3\n",
+    "r1p = r1-p\n",
+    "r2p = r2-p\n",
+    "r3p = r3-p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Distancias dos 3 pontos menos o ponto p\n",
     "d1p = Modulo.norm(r1p)**3\n",
     "d2p = Modulo.norm(r2p)**3\n",
-    "d3p = Modulo.norm(r3p)**3\n",
-    "\n",
+    "d3p = Modulo.norm(r3p)**3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Campo elétrico E\n",
-    "E1 =  (q1*r1p)/(4*pi*eps0)*d1p\n",
-    "E2 = (q2*r2p)/(4*pi*eps0)*d2p\n",
-    "E3 = (q3*r3p)/(4*pi*eps0)*d3p\n",
+    "E1 =  (q1*r1p)/(4*pi*eps0*d1p)\n",
+    "E2 = (q2*r2p)/(4*pi*eps0*d2p)\n",
+    "E3 = (q3*r3p)/(4*pi*eps0*d3p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O campo elétrico na posição [4,2,2] é de: [-569253.05758974  134536.15532415  274819.40798678]\n"
+     ]
+    }
+   ],
+   "source": [
     "#Campo total\n",
     "Et = E1+E2+E3\n",
-    "Et"
+    "print(\"O campo elétrico na posição [4,2,2] é de:\", Et)"
    ]
   },
   {
@@ -191,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -224,10 +195,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sympy as sp\n",
+    "from sympy import ImmutableMatrix as M\n",
+    "from sympy import Integral"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = sp.symbols('k')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k_value = 1/4*pi*eps0\n",
+    "\n",
+    "#Dfeinindo as posições especificadas na questão\n",
+    "P_A = M([4,2,2])\n",
+    "P_B = M([5,2,2])\n",
+    "\n",
+    "#Deslocamento\n",
+    "D_AB = P_A - P_B\n",
+    "M_D_AB = D_AB.dot(D_AB)**3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Calculando a difereça de potencial\n",
+    "D_V = k*q1/ M_D_AB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 1.0 \\cdot 10^{-6} k$"
+      ],
+      "text/plain": [
+       "1.0e-6*k"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Agora o trabalho\n",
+    "W = q1 * D_V\n",
+    "W"
+   ]
   }
  ],
  "metadata": {
