--- a/Q3.ipynb
+++ b/Q3.ipynb
@@ -2,22 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sympy as sp\n",
-    "x,y,z = sp.symbols('x y z')"
+    "x,y,z = sp.symbols('x y z')\n",
+    "pi = sp.pi\n",
+    "eps0 = 1e-9/(36*pi)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Um campo potencial elétrico é dado por $V = 3𝑦𝑥^2+2𝑧𝑦^2 − z$ . Determine:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a) O campo elétrico $\\mathbf{(E)}$ em $(1,2,5)$"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,6 +51,37 @@
     "E_Z = -DV_DZ.subs({x:1, y:2, z:5})\n",
     "\n",
     "print(E_X, E_Y, E_Z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b) A densidade de carga que gera esse potencial elétrico"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{2.77777777777778 \\cdot 10^{-11} \\left(- 3 x^{2} - 6 x y - 2 y^{2} - 4 y z + 1\\right)}{\\pi}$"
+      ],
+      "text/plain": [
+       "2.77777777777778e-11*(-3*x**2 - 6*x*y - 2*y**2 - 4*y*z + 1)/pi"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D = eps0 * -(DV_DX+DV_DY+DV_DZ)\n",
+    "D"
    ]
   },
   {
