--- a/Q2.ipynb
+++ b/Q2.ipynb
@@ -1,8 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### UNIVERSIDADE FEDERAL DO PARÁ CAMPUS UNIVERSITARIO DE TUCURUÍ\n",
+    "### FACULDADE DE ENGENHARIA ELÉTRICA \n",
+    "  \n",
+    "Igor Emanoel Vieira Alves\\\n",
+    "Laura Carlesso dos Santos\\\n",
+    "Giovanna de Paula Barreto Dias Assis\\\n",
+    "Lucas da Conceição Holanda"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Três cargas pontuais $ 𝑄_1 = 1𝑚𝐶, 𝑄_2 = 2𝑚𝐶$ e $𝑄_3 = −3𝑚𝐶$ estão localizadas em $(0,0,4), (−2,6,1)$ e $\n",
+    "2)Três cargas pontuais $ 𝑄_1 = 1𝑚𝐶, 𝑄_2 = 2𝑚𝐶$ e $𝑄_3 = −3𝑚𝐶$ estão localizadas em $(0,0,4), (−2,6,1)$ e $\n",
     "(3, −4, −8)$ respectivamente. Determine:"
    ]
   },
@@ -31,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -88,20 +101,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-2.60838231e+09,  2.85438650e+11,  4.28127984e+11])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "p = Matriz([4,2,2])\n",
     "#Vetores posição\n",
@@ -112,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,21 +138,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "O campo elétrico na posição [4,2,2] é de: [-569253.05758974  134536.15532415  274819.40798678]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([-569253.,  134536.,  274819.])"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#Campo total\n",
     "Et = E1+E2+E3\n",
-    "print(\"O campo elétrico na posição [4,2,2] é de:\", Et)"
+    "Et.round(0)"
    ]
   },
   {
@@ -162,15 +167,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.5454026098213985e-15\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1.5454026098213985e-15"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -182,8 +190,7 @@
     "\n",
     "#Potencial elétrico Total\n",
     "V_t = V1+V2+V3\n",
-    "\n",
-    "print (V_t)"
+    "V_t"
    ]
   },
   {
@@ -195,95 +202,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sympy as sp\n",
-    "from sympy import ImmutableMatrix as M"
+    "from sympy import Matrix as M"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "k = sp.symbols('k')"
+    "k = sp.symbols('k')\n",
+    "q1= 1e-3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 1$"
-      ],
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "k_value = 1/4*pi*eps0\n",
-    "\n",
+    "k_value = 8.99e9\n",
+    "#Campo elétrico da posição [4,2,2]\n",
+    "P_1 = M([-569253,  134536,  274819])\n",
     "#Dfeinindo as posições especificadas na questão\n",
     "P_A = M([4,2,2])\n",
     "P_B = M([5,2,2])\n",
     "\n",
     "#Deslocamento\n",
     "D_AB = P_A - P_B\n",
-    "M_D_AB = D_AB.dot(D_AB)**3"
+    "D_U = P_1.dot(D_AB)\n",
+    "#M_D_AB = D_AB.dot(D_AB)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Calculando a difereça de potencial\n",
-    "D_V = k*q1/ M_D_AB"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle 1.0 \\cdot 10^{-6} k$"
+       "$\\displaystyle -569.253$"
       ],
       "text/plain": [
-       "1.0e-6*k"
+       "-569.253000000000"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Agora o trabalho\n",
-    "W = q1 * D_V\n",
+    "W = -q1* D_U\n",
+    "#Resposta\n",
     "W"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
