--- a/Q3.ipynb
+++ b/Q3.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sympy as sp\n",
-    "x,y,z = sp.symbols('x y z')\n",
-    "pi = sp.pi\n",
-    "eps0 = 1e-9/(36*pi)"
+    "x,y,z,eps0,rho,ax,ay,az = sp.symbols(\"x y z epsilon_0 rho âx ây âz\")\n",
+    "pi = sp.pi"
    ]
   },
   {
@@ -28,29 +27,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-12 -43 -7\n"
-     ]
+     "data": {
+      "text/latex": [
+       "$\\displaystyle - 6 x y âx + ây \\left(- 3 x^{2} - 4 y z\\right) + âz \\left(1 - 2 y^{2}\\right)$"
+      ],
+      "text/plain": [
+       "-6*x*y*âx + ây*(-3*x**2 - 4*y*z) + âz*(1 - 2*y**2)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Calculando o potencial\n",
     "V = 3*y*x**2+2*z*y**2-z\n",
     "\n",
-    "DV_DX = sp.diff(V, x)\n",
-    "DV_DY = sp.diff(V, y)\n",
-    "DV_DZ = sp.diff(V, z)\n",
-    "\n",
-    "E_X = -DV_DX.subs({x:1, y:2, z:5})\n",
-    "E_Y = -DV_DY.subs({x:1, y:2, z:5})\n",
-    "E_Z = -DV_DZ.subs({x:1, y:2, z:5})\n",
-    "\n",
-    "print(E_X, E_Y, E_Z)"
+    "#Calculando o campo elétrico\n",
+    "DV_DX = -1*sp.diff(V, x)*ax\n",
+    "DV_DY = -1*sp.diff(V, y)*ay\n",
+    "DV_DZ = -1*sp.diff(V, z)*az\n",
+    "c_e = DV_DX+DV_DY+DV_DZ\n",
+    "c_e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle - 12 âx - 43 ây - 7 âz$"
+      ],
+      "text/plain": [
+       "-12*âx - 43*ây - 7*âz"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Substituindo nas coordenadas da questão\n",
+    "E_X = c_e.subs(x,1)\n",
+    "E_Y = E_X.subs(y,2)\n",
+    "E_Z = E_Y.subs(z,5)\n",
+    "E_Z"
    ]
   },
   {
@@ -62,34 +92,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\frac{2.77777777777778 \\cdot 10^{-11} \\left(- 3 x^{2} - 6 x y - 2 y^{2} - 4 y z + 1\\right)}{\\pi}$"
+       "$\\displaystyle \\epsilon_{0} \\left(- 6 y - 4 z\\right)$"
       ],
       "text/plain": [
-       "2.77777777777778e-11*(-3*x**2 - 6*x*y - 2*y**2 - 4*y*z + 1)/pi"
+       "epsilon_0*(-6*y - 4*z)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "D = eps0 * -(DV_DX+DV_DY+DV_DZ)\n",
-    "D"
+    "roh= (sp.diff(DV_DX/ax, x) + sp.diff(DV_DY/ay, y) + sp.diff(DV_DZ/az , z))\n",
+    "roh = roh*eps0\n",
+    "#Resposta:\n",
+    "roh"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
